--- a/books/pom.xml
+++ b/books/pom.xml
@@ -8,11 +8,15 @@
 		<version>3.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.github.ashez2000.bookstore</groupId>
 	<artifactId>books</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>books</name>
 	<description>Books Service for BookStore application</description>
+
+    <packaging>jar</packaging>
+
 	<url/>
 	<licenses>
 		<license/>
@@ -90,6 +94,17 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.6</version>
+                <configuration>
+                    <to>
+                        <image>ashez2000/bootstore/books</image>
+                    </to>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
