--- a/orders/src/main/resources/application.yml
+++ b/orders/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/bookstore_orders
+    url: jdbc:postgresql://postgres:5432/bookstore
     username: postgres
     password: password
 
