--- a/orders/pom.xml
+++ b/orders/pom.xml
@@ -96,6 +96,17 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.6</version>
+                <configuration>
+                    <to>
+                        <image>ashez2000/bootstore/orders</image>
+                    </to>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
