--- a/books/src/main/resources/application.yml
+++ b/books/src/main/resources/application.yml
@@ -3,10 +3,10 @@ server:
 
 spring:
   application:
-    name: bookstore-books
+    name: books
 
   datasource:
-    url: jdbc:postgresql://postgres:5432/bookstore
+    url: jdbc:postgresql://localhost:5432/bookstore
     username: postgres
     password: password
 
@@ -22,7 +22,7 @@ spring:
 
 eureka:
   instance:
-    hostname: discovery
+    hostname: localhost
   client:
     service-url:
-      defaultZone: http://discovery:8070/eureka
+      defaultZone: http://localhost:8070/eureka
