--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -12,6 +12,19 @@ spring:
             locator:
               enabled: true
               lowerCaseServiceId: true
+          routes:
+            - id: books
+              uri: lb:http://BOOKS
+              predicates:
+                - Path=/api/books/**
+            - id: orders
+              uri: lb:http://ORDERS
+              predicates:
+                - Path=/api/orders/**
+            - id: payments
+              uri: lb:http://payments
+              predicates:
+                - Path=/api/payments/**
 
 eureka:
   instance:
