--- a/books/src/main/resources/application.yml
+++ b/books/src/main/resources/application.yml
@@ -6,19 +6,19 @@ spring:
     name: books
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/bookstore
-    username: postgres
+    uri: jdbc:h2:mem:books_db
+    driverClassName: org.h2.Driver
+    username: root
     password: password
 
+  h2:
+    console: true
+
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
-
     show-sql: true
-
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 eureka:
   instance:
