--- a/books/src/main/resources/application_prod.yml
+++ b/books/src/main/resources/application_prod.yml
@@ -3,4 +3,9 @@ spring:
     activate:
       on-profile: prod
 
-foobar: production
+eureka:
+  instance:
+    hostname: bookstore
+  client:
+    service-url:
+      defaultZone: http://bookstore:8070/eureka
