--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: bookstore-books
     ports:
       - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
 
     deploy:
       resources:
@@ -24,6 +26,8 @@ services:
     container_name: bookstore-discovery
     ports:
       - "8070:8070"
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
 
     deploy:
       resources:
