--- a/books/src/main/resources/application.yml
+++ b/books/src/main/resources/application.yml
@@ -26,7 +26,9 @@ spring:
 
 eureka:
   instance:
-    hostname: localhost
+    preferIpAddress: true
   client:
-    service-url:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
       defaultZone: http://localhost:8070/eureka
