--- a/orders/src/main/resources/application.yml
+++ b/orders/src/main/resources/application.yml
@@ -5,24 +5,30 @@ spring:
   application:
     name: orders
 
+  config:
+    import:
+      - application_prod.yml
+
   datasource:
-    url: jdbc:postgresql://localhost:5432/bookstore
-    username: postgres
+    uri: jdbc:h2:mem:books_db
+    driverClassName: org.h2.Driver
+    username: root
     password: password
 
+  h2:
+    console: true
+
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
-
     show-sql: true
-
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 eureka:
   instance:
-    hostname: localhost
+    preferIpAddress: true
   client:
-    service-url:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
       defaultZone: http://localhost:8070/eureka
